--- a/DesafioTecnicoSTi3/App.xaml
+++ b/DesafioTecnicoSTi3/App.xaml
@@ -2,12 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DesafioTecnicoSTi3"
-             StartupUri="Views/Principal.xaml">
+             StartupUri="View/Principal.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Button.xaml"/>
                 <ResourceDictionary Source="Resources/HeaderDataGrid.xaml"/>
+                <ResourceDictionary Source="Resources/TextBox.xaml"/>
+                <ResourceDictionary Source="Resources/DataGrid.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>         
     </Application.Resources>
