--- a/DesafioTecnicoSTi3/Resources/TextBox.xaml
+++ b/DesafioTecnicoSTi3/Resources/TextBox.xaml
@@ -1,13 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Btn" TargetType="Button">
-        <Setter Property="Cursor" Value="Hand"/>
-    </Style>
-
-    <Style x:Key="BtnPrincipal" TargetType="Button" BasedOn="{StaticResource Btn}">
+    <Style x:Key="EstiloTB" TargetType="TextBox">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="Button">
+                <ControlTemplate TargetType="TextBox">
                     <Border Background="{TemplateBinding Background}" CornerRadius="5">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         <Border.Effect>
@@ -17,11 +13,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Opacity" Value="0.6"/>
-            </Trigger>
-        </Style.Triggers>
     </Style>
     
 </ResourceDictionary>
